--- a/designer/mainwindow.ui
+++ b/designer/mainwindow.ui
@@ -1144,6 +1144,19 @@
        <string>Run Simulation</string>
       </property>
      </widget>
+     <widget class="QCheckBox" name="spectrum_check">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>180</y>
+        <width>181</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Plot Spectrum</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
